# firn

./: README.md  go.mod
.github/workflows/: build.old.yml  build.yml  linux-build.yml  macos-build.yml  windows-build-firn.yml  windows-build.yml
cmd/schema_inspector/: main.go
polars/: BUILD.bazel  dataframe.go  dataframe_darwin_arm64.go  dataframe_linux_amd64.go  dataframe_test.go  dataframe_windows_amd64.go  esword_test.go  expr.go  firn.h  from_memory.go  opcodes.go
rust/: Cargo.toml
rust/src/: dataframe.rs  execution.rs  expr.rs  io.rs  opcodes.rs  types.rs
scripts/: build_rust.sh  build_rust_win.sh  build_rust_win_firn.sh
