[package]
name = "firn"
version = "0.1.0"
edition = "2021"

[lib]
name = "firn"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
polars = { version = "0.52", features = [
    "lazy",
    "csv",
    "json",
    "parquet",
    "strings",
    "temporal",
    "dtype-full",
    "regex",
    "sql",
    "string_pad",
] }
polars-sql = "0.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
#[profile.release]
#codegen-units = 16
#lto = "thin"
#strip = true
#debug = false
## 👇 新增这一行 👇
#panic = "abort"